--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "DEBUG=server:* nodemon ./bin/www"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
+    "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cloudinary": "^1.13.2",
