--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "bulma": "^0.7.2",
     "cloudinary": "^1.13.2",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^1.3.2",
